@@ -1,3 +1,3 @@
 explain int a[0]
-            ^
-13: error: array size must be greater than 0
+             ^
+14: error: array size must be greater than 0
