@@ -1,3 +1,3 @@
 explain void a[4]
-             ^
-14: error: array of void; did you mean array of pointer to void?
+              ^
+15: error: array of void; did you mean array of pointer to void?
