@@ -1,3 +1,3 @@
 explain int f[5](double)
-            ^
-13: error: array of function is illegal; did you mean array of pointer to function?
+             ^
+14: error: array of function is illegal; did you mean array of pointer to function?
