@@ -1,3 +1,3 @@
 explain int a[const 9]
-              ^
-15: syntax error: "const": ']' expected
+             ^
+14: error: "const" arrays are illegal outside of parameters
