@@ -1,3 +1,3 @@
 explain int a[static 9]
-              ^
-15: syntax error: "static": ']' expected
+             ^
+14: error: "static" arrays are illegal outside of parameters
