@@ -1,3 +1,3 @@
 explain int (^b)()[]
-            ^
-13: error: block returning array; did you mean block returning pointer?
+                  ^
+19: error: block returning array; did you mean block returning pointer?
